# testgen-minimal-yaml

./: Cargo.toml
src/: lib.rs
