[package]
name = "testgen-minimal-yaml"
version = "0.1.0"
authors = ["nathanwhit <nathan.whitaker01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
proc-macro2 = "1.0.8"
syn = "1.0.14"
quote = "1.0.2"
regex = "1.3.4"
minimal-yaml = {path = "/Users/nathanw/Documents/Projects/minimal-yaml", features = ["suite"]}
derive_builder = "0.9.0"
heck = "0.3.1"
serde = "1.0.104"
serde_json = "1.0.48"
bincode = "1.2.1"
# proc-macro-error = "0.4.9"
